--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,8 +16,18 @@ const { title } = Astro.props
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
+  <body class="bg-gray-900">
     <slot />
   </body>
 </html>
-<style is:global></style>
+<style is:global>
+  :root {
+    color-scheme: light dark;
+  }
+  html {
+    font-family: Menlo, monospace;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+</style>
