--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro"
 
-const response = await fetch("https://typecicla.vercel.app/api/hello.json")
+const response = await fetch("https://typecicla.vercel.app/api/hello")
 const { message } = await response.json()
 ---
 
